force-app/main/default/objects/TTS_Space_Asset__c/TTS_Space_Asset__c.object-meta.xml
<CustomObject>
    <description>Tracks physical assets and equipment stored or used within a managed space.</description>
    <label>Space Asset</label>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>Space Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Space Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>