force-app/main/default/objects/TTS_Space_Asset__c/fields/Asset_Category__c.field-meta.xml
<CustomField>
    <fullName>Asset_Category__c</fullName>
    <description>Groups the asset by type for inventory and reporting.</description>
    <inlineHelpText>Select the category that best describes this asset.</inlineHelpText>
    <label>Asset Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AV</fullName>
            </value>
            <value>
                <fullName>Access / Security</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>IT / Equipment</fullName>
            </value>
            <value>
                <fullName>Lab / Makerspace</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>