force-app/main/default/objects/TTS_Space_Asset__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Stores descriptive details about the asset, including identifying characteristics or condition.</description>
    <inlineHelpText>Describe the asset and include any details useful for identification or management.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>