force-app/main/default/objects/TTS_Space_Asset__c/fields/Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Stores the estimated monetary value of the asset.</description>
    <inlineHelpText>Enter the asset's estimated current value in the record currency.</inlineHelpText>
    <label>Estimated Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>