force-app/main/default/objects/TTS_Space_Asset__c/fields/Internal_Asset_Reference__c.field-meta.xml
<CustomField>
    <fullName>Internal_Asset_Reference__c</fullName>
    <description>Stores the internal tracking reference for the asset and supports matching with external records.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the reference your organisation uses to track this asset.</inlineHelpText>
    <label>Internal Asset Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>