force-app/main/default/objects/TTS_Space_Asset__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Stores the descriptive name used to identify the asset.</description>
    <inlineHelpText>Enter a concise name that users will recognise for this asset.</inlineHelpText>
    <label>Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>