force-app/main/default/objects/TTS_Space_Asset__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <description>Records the date when the asset was purchased.</description>
    <inlineHelpText>Enter the asset's original purchase date.</inlineHelpText>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>