force-app/main/default/objects/TTS_Space_Asset__c/fields/Space__c.field-meta.xml
<CustomField>
    <fullName>Space__c</fullName>
    <description>Associates the asset with the parent space where it is stored or used.</description>
    <inlineHelpText>Select the space where this asset is stored or used.</inlineHelpText>
    <label>Space</label>
    <referenceTo>TTS_Space__c</referenceTo>
    <relationshipLabel>Space Assets</relationshipLabel>
    <relationshipName>Space_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>